
2001-08-10  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: also build data files even with --disable-tools (oops)

2001-08-10  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc (Sleep_schedule): Always try to find bed.
	* usecode/intrinsics.cc: Remove_npc() sets schedule to 'wait' so
	NPC won't come back.

	* actors.cc: Got to set flag 0x10 even if in SI, since it gets
	tested in Usecode.
	* actors.cc,intrinsics.cc:  Update_forced_schedule() caused Iolo
	bug in Purity Test; disabled.
	* ucsched.cc,ucscriptop.h: Usecode2 script for fixing Zorkhas 
	Bridge crash.

2001-08-10  Dominik Reichardt <gigdr@tesionmail.de>
	* FAQ and docs/faq/exult_faq.xml: updated FAQ
	* docs/faq/faq_text.xsl: link to html FAQ updated 
	* docs/readme/makefile.*: generate docs.dat instead of doc.dat
	* README and docs/readme/readme.xml: Updated with MacOS midi and Status bar
	* docs/readme/*.xsl: some changes

2001-08-09  Max Horn <max@quendi.de>
	* audio/midi_drivers/mac_midi.cc: channel pan/volume; tempo; fixed note off
	  recognition; fixed polyphony calculation; dealloc the midi event list properly
	  Now works much better, but I just got a crash for it, so it needs more work
	* audio/xmidi.cc: fixed default channel volume from 64 to 90; initialize
	  all event structs with zeros, which makes debuggin midi drivers easier
	* mac/ExultMac.mcp.xml.sit: new version of the MacOS project file

2001-08-09  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapeinf.h: added the 'has_hp' object type
	* objs.*: use the has_hp object type to determine if objects are 
	destroyable. (doors are exception). Also call intrinsic 0x626 if
	object is destroyed.
	TODO: do the same for containers. (using the 'resistance' field)
	unfortunately this implies that the remove_item intrinsic will also
	have to extract the contents of a container...

2001-08-09  Max Horn <max@quendi.de>
	* audio/midi_drivers/mac_midi.*: mac midi driver now semi-working! It will assert