@@ -1,3 +1,7 @@
+2001-08-10  Tristan Tarrant <nadir@users.sourceforge.net>
+	* gamewin.cc, keyactions.cc, gumps/Face_stats.*: save/restore face 
+	status
+	* NEWS: updated
 
 2001-08-10  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* configure.in: also build data files even with --disable-tools (oops)
